Update to 1.21.7, add pvp toggle keybind